[package]
name = "teste"
version = "0.1.0"
edition = "2021"
authors = ["Daniel"]
description = "Um contrato de gerenciamento de biblioteca"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
ink_prelude = { version = "3.0", default-features = false }

[lib]
name = "teste"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "ink_prelude/std",
]
ink-as-dependency = []
__ink_dylint_Storage = []
__ink_dylint_Constructor = []

[profile.release]
overflow-checks = false